results/SpecGenBench/2-shot/log-FindClosestNum-2023_11_06_00_03_01.txt
class FindClosestNum {
    
    //@ requires nums != null && nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; \result <= nums[i]);
    //@ ensures (\exists int i; 0 <= i && i < nums.length; \result == nums[i]);
    public int findClosestNumber(int[] nums) {
        int ans = Integer.MAX_VALUE;

        //@ maintaining (\forall int i; 0 <= i && i < \loop_invariant; ans <= nums[i]);
        //@ maintaining (\exists int i; 0 <= i && i < \loop_invariant; ans == nums[i]);
        //@ decreases nums.length - \loop_invariant;
        for(int i = 0; i < nums.length; i++) {
            int num = nums[i];
            int absNum = (num<0?-num:num);
            int absAns = (ans<0?-ans:ans);
            if(absNum < absAns || (absNum == absAns && num > ans)) {
                ans = num;
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:9: error: This backslash token is unknown: \loop_invariant
        //@ maintaining (\forall int i; 0 <= i && i < \loop_invariant; ans <= nums[i]);
                                                      ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:9: error: ')' expected
        //@ maintaining (\forall int i; 0 <= i && i < \loop_invariant; ans <= nums[i]);
                                                                                      ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:10: error: This backslash token is unknown: \loop_invariant
        //@ maintaining (\exists int i; 0 <= i && i < \loop_invariant; ans == nums[i]);
                                                      ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:10: error: ')' expected
        //@ maintaining (\exists int i; 0 <= i && i < \loop_invariant; ans == nums[i]);
                                                                                      ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:11: error: This backslash token is unknown: \loop_invariant
        //@ decreases nums.length - \loop_invariant;
                                    ^
5 errors

